# py-url-shortener

./: .dockerignore  Makefile  README.md  docker-compose.local.yml  pyproject.toml
ci/: .dockerignore  Dockerfile_app  docker-compose.local.yml  nginx.conf
ci/kubernetes/: Chart.yaml
ci/kubernetes/templates/: configmap.yaml  daemonset.yaml  deployment.yaml  scaling.yaml  service.yaml
src/pyurlshortener/configurator/settings/: base.py
src/pyurlshortener/domain/: models.py
src/pyurlshortener/entrypoints/web/: application.py
src/pyurlshortener/entrypoints/web/api/: v1.py
src/pyurlshortener/service/: cache.py  counter.py  encoder.py  url.py
tests/: conftest.py
tests/domain/: test_models.py
tests/entrypoints/: locustfile.py  test_create_short_url.http  test_get_original_url.http
tests/services/: test_counter.py  test_encoder.py  test_url.py
